--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  background-color: #fff;
+  background-color: #f1eeea;
   position: relative;
 }
 
@@ -468,6 +468,7 @@ a:hover {
 .footer-16371 {
   padding: 7rem 0;
   font-family: "Poppins", sans-serif;
+  color: #a52a2a;
 }
 .footer-16371 .footer-site-logo {
   text-align: center;
@@ -475,7 +476,7 @@ a:hover {
   font-weight: 900;
 }
 .footer-16371 .footer-site-logo a {
-  color: #4200ff;
+  color: inherit;
 }
 .footer-16371 .nav-links {
   padding: 0;
@@ -494,7 +495,6 @@ a:hover {
 .footer-16371 .social h3 {
   font-weight: bold;
   font-size: 18px;
-  color: #000;
 }
 .footer-16371 .social ul li {
   display: inline-block;
@@ -519,6 +519,6 @@ a:hover {
   color: #dd4d5a;
 }
 .footer-16371 .copyright {
-  color: #999999;
+  color: #8a6f6f;
 }
 
