--- a/public/css/index.css
+++ b/public/css/index.css
@@ -19,19 +19,13 @@
   .hero-inner-cont {
     position: absolute;
     text-align: center;
-    left: 33%;
-    bottom: 10px;
-    height: 33%;
-    width: 34%;
+    bottom: 20vh;
+    width:100%;
   }
 
-  .title{
-    color: #a52a2a;
-    text-transform: uppercase;
-    font-weight: 600;
+  p{
+    color: #826C5F;
   }
-  
-
 /* About Us Section
 --------------------------------*/
 #about {
@@ -48,7 +42,8 @@
   right: 0;
   top: 0;
   bottom: 0;
-  background: rgba(255, 255, 255, 0.92);
+  background-color: #fdfaf8;
+  opacity: 0.92;
   z-index: 9;
 }
 
@@ -58,7 +53,6 @@
 }
 
 #about .about-col {
-  background: #fff;
   border-radius: 0 0 4px 4px;
   box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
   margin-bottom: 20px;
@@ -77,7 +71,7 @@
   height: 64px;
   text-align: center;
   position: absolute;
-  background-color: #18d26e;
+  background-color: #bc9864;
   border-radius: 50%;
   border: 4px solid #fff;
   left: calc( 50% - 32px);
@@ -91,16 +85,12 @@
 #about .about-col i {
   font-size: 28px;
   line-height: 0;
-  color: #fff;
+  color: black;
   transition: 0.3s;
 }
 
 #about .about-col:hover .icon {
-  background-color: #fff;
-}
-
-#about .about-col:hover i {
-  color: #18d26e;
+  background-color: #AC6F53;
 }
 
 #about .about-col h2 {
@@ -112,18 +102,10 @@
   margin: 40px 0 12px 0;
 }
 
-#about .about-col h2 a {
-  color: #000;
-}
-
-#about .about-col h2 a:hover {
-  color: #18d26e;
-}
-
 #about .about-col p {
   font-size: 14px;
   line-height: 24px;
-  color: #333;
+  font-weight: 500;
   margin-bottom: 0;
   padding: 0 20px 20px 20px;
 }
@@ -213,13 +195,13 @@
   border-radius: 25px;
   transition: 0.5s;
   margin-top: 10px;
-  border: 2px solid #fff;
+  border: 2px solid #AC6F53;
   color: #fff;
 }
 
 #call-to-action .cta-btn:hover {
-  background: #18d26e;
-  border: 2px solid #18d26e;
+  background: #AC6F53;
+  border: 2px solid #AC6F53;
 }
 
 /**
@@ -229,6 +211,7 @@
 .media-29101 {
   text-align: center;
 }
+
 .media-29101 img {
   margin-bottom: 20px;
   border-radius: 50%;
@@ -275,7 +258,3 @@
 .owl-2-style .owl-dots .owl-dot:focus {
   outline: none;
 }
-
-/**
-** contact form
-**/
