--- a/public/css/index.css
+++ b/public/css/index.css
@@ -13,13 +13,13 @@
     bottom: 0;
     width: 100%;
     content: "";
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.65);
   }
   
   .hero-inner-cont {
     position: absolute;
     text-align: center;
-    bottom: 20vh;
+    bottom: 25vh;
     width:100%;
   }
 
@@ -30,136 +30,15 @@
   button.active span{
     background-color: #AC6F53 !important;
   }
-/* About Us Section
---------------------------------*/
-#about {
-  background: url("../img/about-bg.jpg") center top no-repeat fixed;
-  background-size: cover;
-  padding: 60px 0 40px 0;
-  position: relative;
-}
 
-#about::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background-color: #fdfaf8;
-  opacity: 0.92;
-  z-index: 9;
-}
-
-#about .container {
-  position: relative;
-  z-index: 10;
-}
-
-#about .about-col {
-  border-radius: 0 0 4px 4px;
-  box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
-  margin-bottom: 20px;
-}
-
-#about .about-col .img {
-  position: relative;
-}
-
-#about .about-col .img img {
-  border-radius: 4px 4px 0 0;
-}
-
-#about .about-col .icon {
-  width: 64px;
-  height: 64px;
-  text-align: center;
-  position: absolute;
-  background-color: #bc9864;
-  border-radius: 50%;
-  border: 4px solid #fff;
-  left: calc( 50% - 32px);
-  bottom: -30px;
-  transition: 0.3s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-#about .about-col i {
-  font-size: 28px;
-  line-height: 0;
-  color: black;
-  transition: 0.3s;
-}
-
-#about .about-col:hover .icon {
-  background-color: #AC6F53;
-}
-
-#about .about-col h2 {
-  color: #000;
-  text-align: center;
-  font-weight: 700;
-  font-size: 20px;
-  padding: 0;
-  margin: 40px 0 12px 0;
-}
-
-#about .about-col p {
-  font-size: 14px;
-  line-height: 24px;
-  font-weight: 500;
-  margin-bottom: 0;
-  padding: 0 20px 20px 20px;
-}
-
-
-/* Services Section
---------------------------------*/
-#services {
-  background: #fff;
-  background-size: cover;
-  padding: 60px 0 40px 0;
-}
-
-#services .box {
-  margin-bottom: 30px;
-}
-
-#services .icon {
-  float: left;
-}
-
-#services .icon i {
-  color: #18d26e;
-  font-size: 36px;
-  line-height: 0;
-  transition: 0.5s;
-}
-
-#services .title {
-  margin-left: 60px;
-  font-weight: 700;
-  margin-bottom: 15px;
-  font-size: 18px;
-}
-
-#services .title a {
-  color: #111;
-}
-
-#services .box:hover .title a {
-  color: #18d26e;
-}
-
-#services .description {
-  font-size: 14px;
-  margin-left: 60px;
-  line-height: 24px;
-  margin-bottom: 0;
-}
-
+  a#btn-100vh{
+    color: white;
+    border: 2px solid #AC6F53;
+    font-size: 16px;
+    font-weight: bold;
+    width: 160px;
+    height: 45px;
+  }
 
 #call-to-action {
   background: url(/images/wooden_texture_3.jpg) fixed center center;
@@ -206,59 +85,4 @@
 #call-to-action .cta-btn:hover {
   background: #AC6F53;
   border: 2px solid #AC6F53;
-}
-
-/**
-** Testimonial
-*/
-
-.media-29101 {
-  text-align: center;
-}
-
-.media-29101 img {
-  margin-bottom: 20px;
-  border-radius: 50%;
-  width: 80px !important;
-  margin: 0 auto 40px auto;
-}
-.media-29101 h3 {
-  font-size: 18px;
-  font-weight: 900 !important;
-  margin-bottom: 30px;
-}
-.media-29101 h3 a {
-  color: #6c757d;
-}
-
-.owl-2-style .owl-nav {
-  display: none;
-}
-
-.owl-2-style .owl-dots {
-  text-align: center;
-  position: relative;
-  bottom: -30px;
-}
-.owl-2-style .owl-dots .owl-dot {
-  display: inline-block;
-}
-.owl-2-style .owl-dots .owl-dot span {
-  display: inline-block;
-  width: 7px;
-  height: 7px;
-  border-radius: 0px;
-  background: #cccccc;
-  -webkit-transition: 0.3s all cubic-bezier(0.32, 0.71, 0.53, 0.53);
-  -o-transition: 0.3s all cubic-bezier(0.32, 0.71, 0.53, 0.53);
-  transition: 0.3s all cubic-bezier(0.32, 0.71, 0.53, 0.53);
-  margin: 3px;
-  border-radius: 50%;
-}
-.owl-2-style .owl-dots .owl-dot.active span {
-  background: #007bff;
-}
-.owl-2-style .owl-dots .owl-dot:active,
-.owl-2-style .owl-dots .owl-dot:focus {
-  outline: none;
 }
