--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,92 +1,46 @@
-/* About Us Section
+/* about Section
 --------------------------------*/
 #about {
-    background: url("../img/about-bg.jpg") center top no-repeat fixed;
-    background-size: cover;
-    padding: 25px 0 40px 0;
-    position: relative;
-    margin-bottom: -30px;
-  }
-  
-  #about::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    background-color: #fdfaf8;
-    opacity: 0.92;
-    z-index: 9;
-  }
-  
-  #about .container {
-    position: relative;
-    z-index: 10;
-  }
-  
-  #about .about-col {
-    border-radius: 0 0 4px 4px;
-    box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
-    margin-bottom: 20px;
-  }
-  
-  #about .about-col .img {
-    position: relative;
-  }
-  
-  #about .about-col .img img {
-    border-radius: 4px 4px 0 0;
-  }
-  
-  #about .about-col .icon {
-    width: 64px;
-    height: 64px;
-    text-align: center;
-    position: absolute;
-    background-color: #bc9864;
-    border-radius: 50%;
-    border: 4px solid #fff;
-    left: calc( 50% - 32px);
-    bottom: -30px;
-    transition: 0.3s;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  #about .about-col i {
-    font-size: 28px;
-    line-height: 0;
-    color: black;
-    transition: 0.3s;
-  }
-  
-  #about .about-col:hover .icon {
-    background-color: #AC6F53;
-  }
-  
-  #about .about-col h2 {
-    color: #000;
-    text-align: center;
-    font-weight: 700;
-    font-size: 20px;
-    padding: 0;
-    margin: 40px 0 12px 0;
-  }
-  
-  #about .about-col p {
-    color: #000;
-    font-size: 15px;
-    line-height: 24px;
-    font-weight: 500;
-    margin-bottom: 0;
-    padding: 0 20px 20px 20px;
-  }
+  background: #fff;
+  background-size: cover;
+  padding: 60px 0 40px 0;
+  margin-bottom: -30px;
+}
 
-  #about-content{
-    color: #000;
-    line-height: 1.8;
-    font-size: 16px;
-    text-align:justify;
-  }
+#about .box {
+  margin-bottom: 30px;
+}
+
+#about .icon {
+  float: left;
+}
+
+#about .icon i {
+  color: #bc9864;
+  font-size: 36px;
+  line-height: 0;
+  transition: 0.5s;
+}
+
+#about .title {
+  margin-left: 60px;
+  font-weight: 700;
+  margin-bottom: 15px;
+  font-size: 18px;
+  color: #111;
+}
+
+#about .description {
+  font-size: 14px;
+  margin-left: 60px;
+  line-height: 24px;
+  margin-bottom: 0;
+}
+
+.about-content{
+  text-align: justify;
+}
+
+p{
+  color: #826C5F;
+}
