--- a/public/css/services.css
+++ b/public/css/services.css
@@ -1,38 +1,92 @@
-/* Services Section
+/* services Us Section
 --------------------------------*/
 #services {
-    background: #fff;
+    background: url("../img/services-bg.jpg") center top no-repeat fixed;
     background-size: cover;
-    padding: 60px 0 40px 0;
+    padding: 25px 0 40px 0;
+    position: relative;
     margin-bottom: -30px;
   }
   
-  #services .box {
-    margin-bottom: 30px;
+  #services::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: #fdfaf8;
+    opacity: 0.92;
+    z-index: 9;
   }
   
-  #services .icon {
-    float: left;
+  #services .container {
+    position: relative;
+    z-index: 10;
   }
   
-  #services .icon i {
-    color: #bc9864;
-    font-size: 36px;
+  #services .services-col {
+    border-radius: 0 0 4px 4px;
+    box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
+    margin-bottom: 20px;
+  }
+  
+  #services .services-col .img {
+    position: relative;
+  }
+  
+  #services .services-col .img img {
+    border-radius: 4px 4px 0 0;
+  }
+  
+  #services .services-col .icon {
+    width: 64px;
+    height: 64px;
+    text-align: center;
+    position: absolute;
+    background-color: #bc9864;
+    border-radius: 50%;
+    border: 4px solid #fff;
+    left: calc( 50% - 32px);
+    bottom: -30px;
+    transition: 0.3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  #services .services-col i {
+    font-size: 28px;
     line-height: 0;
-    transition: 0.5s;
+    color: black;
+    transition: 0.3s;
   }
   
-  #services .title {
-    margin-left: 60px;
+  #services .services-col:hover .icon {
+    background-color: #AC6F53;
+  }
+  
+  #services .services-col h2 {
+    color: #000;
+    text-align: center;
     font-weight: 700;
-    margin-bottom: 15px;
-    font-size: 18px;
-    color: #111;
+    font-size: 20px;
+    padding: 0;
+    margin: 40px 0 12px 0;
   }
   
-  #services .description {
-    font-size: 14px;
-    margin-left: 60px;
+  #services .services-col p {
+    color: #000;
+    font-size: 15px;
     line-height: 24px;
+    font-weight: 500;
     margin-bottom: 0;
+    padding: 0 20px 20px 20px;
+  }
+
+  #services-content{
+    color: #000;
+    line-height: 1.8;
+    font-size: 16px;
+    text-align:justify;
   }
